added travis install and build scripts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,22 @@
 cmake_minimum_required(VERSION 3.11)
+
 project(project_setup_test)
 
-#message(STATUS "CMAKE_PREFIX_PATH is:" $ENV{CMAKE_PREFIX_PATH})
-#message(STATUS "CPATH is:" $ENV{CPATH})
 
-find_package(Eigen3 3.3 REQUIRED NO_MODULE)
+list (APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
+list (APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/modules")
+message(STATUS "CMAKE_PREFIX_PATH is:" $ENV{CMAKE_PREFIX_PATH})
+message(STATUS "CPATH is:" $ENV{CPATH})
+
+#find_package(Eigen3 3.3 REQUIRED NO_MODULE)
+
+if(POLICY CMP0074)
+    cmake_policy(SET CMP0074 NEW)
+endif()
+
+set(EIGEN3_ROOT_DIR "/HTOpt/libs/eigen/3.3.4")
+set(EIGEN3_ROOT "/HTOpt/libs/eigen/3.3.4")
+find_package(Eigen3 3.3 REQUIRED)
 
 set(CMAKE_CXX_STANDARD 14)
 
