--- a/.travis.yml
+++ b/.travis.yml
@@ -28,3 +28,6 @@ before_install:
 install:
   - $TRAVIS_BUILD_DIR/scripts/travis-install-dependencies.sh $LOCAL_INSTALL
   - export PATH=${LOCAL_INSTALL}/cmake/bin:${LOCAL_INSTALL}/bin:${PATH}
+
+script:
+  - $TRAVIS_BUILD_DIR/scripts/travis-build-test.sh
