--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,16 @@
 cmake_minimum_required(VERSION 3.11)
 
-project(project_setup_test)
+project(FMM)
 
 list (APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 list (APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/modules")
 
-
-if(POLICY CMP0074)
-    cmake_policy(SET CMP0074 NEW)
-endif()
-
-
 list (APPEND Eigen3_ROOT "/HTOpt/libs/eigen/3.3.4/")
+list (APPEND EIGEN3_ROOT "/HTOpt/libs/eigen/3.3.4/")
+list (APPEND EIGEN3_ROOT_DIR "/HTOpt/libs/eigen/3.3.4/")
 
+add_subdirectory(lib)
+add_subdirectory(app)
+add_subdirectory(tests)
 
-find_package(Eigen3 3.3.4 REQUIRED)
-
-set(CMAKE_CXX_STANDARD 14)
-
-
-
-add_executable(project_setup_test main.cpp)
-target_link_libraries(project_setup_test Eigen3::Eigen)
+enable_testing()
